--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="skeleton_article_category">类型：%1$s</string>
 
     <string name="float_node">音符动画</string>
+
+    <string name="ring_progress_bar">圆环进度条</string>
 </resources>
